# lovecasim

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  GEMINI.md  LovecaSolo.spec  PR_DESCRIPTION.md  ability_gap_report.txt  ability_samples.txt  ability_samples_manual.txt  advanced_ai_test.txt  advanced_ai_test_v2.txt  advanced_ai_test_v3.txt  advanced_ai_test_v4.txt  advanced_ai_test_v6.txt  ai_test_output.txt  analysis_detailed_100cards.json  analyze_complexity.py  analyze_nijigaku.py  baseline_coverage_v2.txt  benchmark_jit.txt  benchmark_jit2.txt  benchmark_jit2_utf8.txt  benchmark_jit3.txt  benchmark_jit3_utf8.txt  benchmark_jit4.txt  benchmark_jit4_utf8.txt  benchmark_jit5.txt  benchmark_jit5_utf8.txt  benchmark_jit_utf8.txt  benchmark_pooling.txt  benchmark_pooling2.txt  benchmark_pooling2_utf8.txt  benchmark_pooling3.txt  benchmark_pooling3_utf8.txt  benchmark_pooling_utf8.txt  benchmark_results.txt  benchmark_results_final.txt  benchmark_results_final_utf8.txt  benchmark_results_utf8.txt  benchmark_slots.txt  (+132 more)
ai/: headless_runner.py  hyperparam_search.py  mcts.py  network.py  network_torch.py  train.py
backend/: server.py
compiler/: main.py  parser.py
diagnostic_logs/: empty_actions_20260108_011308.json  empty_actions_20260108_011310.json  empty_actions_20260108_011311.json  empty_actions_20260108_014555.json  empty_actions_20260108_014559.json  empty_actions_20260108_014600.json  empty_actions_20260108_014601.json  empty_actions_20260108_014608.json  empty_actions_20260108_014610.json
docs/: baseline_coverage.md  card_analysis_log.md  (+11 more)
game/: mcts.py  (+18 more)
(+1040 files in other folders)
