[project]
name = "lovecasim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.0",
    "gunicorn==21.2.0",
    "numba>=0.58.0",
    "numpy>=1.26.0",
    "pydantic>=2.12.5",
]

[tool.setuptools]
packages = ["engine", "ai", "tools", "compiler"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "ruff>=0.14.11",
]

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501", "E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tools.*", "ai.*", "scripts.*"]
ignore_errors = true
